# practical

./: .gitignore  manage.py  pyproject.toml
task_for_backend/: asgi.py  settings.py  urls.py  wsgi.py
web/: urls.py  views.py
web/templates/: all_letters.html  find_letter.html  letter.html
